--- a/final.html
+++ b/final.html
@@ -176,14 +176,14 @@
 </form>
   <!-- <button class="btn">Button</button> -->
   
-
+  <form class="form_input">
   <div class="container_option">
       <div class="submit">
           <button class="btn">Submit</button>
       </div>
       
   </div>
-  
+  </form>
 
   <div class="label_result">
     <div>
